--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "1.3.2",
   "private": true,
+  "homepage": "/BCN",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.428.0",
     "@react-google-maps/api": "^2.19.2",
